[package]
name = "learn_open_gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.47.0"
stb_image = "0.2.4"
gfx-maths = "0.2.8"
russimp = { version = "1.0.4", features = ["prebuilt"] }
fastrand = "1.8.0"

[build-dependencies]
gl_generator = "0.14"
