[package]
name = "learn_open_gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.47.0"
gl = "0.14.0"
glam = "0.22.0"
stb_image = "0.2.4"
russimp = {version = "1.0.4", features = ["prebuilt"]}
